--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
                                                                                 alt="">
                         <div class="t567__title t-name t-name_xl" style="" field="title">Ota yhteyttä meihin</div>
                         <div class="t567__descr t-text t-text_sm" style="" field="descr"><a
-                                href="https://www.instagram.com/levani.studio/">levani.studio</a></div>
+                                href="https://www.instagram.com/levani.center/">levani</a></div>
                     </div>
                 </div>
                 <div class="t567__col t-col t-col_4 ">
