--- a/en.html
+++ b/en.html
@@ -22,7 +22,7 @@
 
     <meta property="og:url" content="http://massage.epil.fi/en.html">
     <meta property="og:title" content="Newborn massage">
-    <meta property="og:description" content="Anika works in the capital region of Finland, offering home visits or would be pleased to welcome you to her cozy studio at Kellosilta 2 (Helsinki).">
+    <meta property="og:description" content="Anika works in the capital region of Finland, offering home visits or would be pleased to welcome you to her cozy studio at Kellosilta 2B (Helsinki).">
     <meta property="og:type" content="website">
     <meta property="og:image"
           content="https://thumb.tildacdn.com/tild3735-3363-4163-b231-303331636633/-/format/webp/0545_001.jpeg">
@@ -628,7 +628,7 @@
                                 <p style="text-align: right;">Newborn massage helsinki</p></h1>
                             <div class="t102__descr t-descr t-descr_md t-animate t-animate_started"
                                  data-animate-style="fadeinup" data-animate-group="yes" style="transition-delay: 0.3s;"
-                                 field="descr">Kellosilta 2, Helsinki
+                                 field="descr">Kellosilta 2B, Helsinki
                             </div>
                             <span class="space"></span></div>
                     </div>
@@ -778,7 +778,7 @@
                         <div class="t681__tablewrapper">
                             <div class="t681__textwrapper">
                                 <div class="t681__price t-descr t-descr_sm" style="" field="li_descr__1493289538895">-
-                                    Massage at the studio Kellosilta 2
+                                    Massage at the studio Kellosilta 2B
                                 </div>
                             </div>
                             <div class="t681__pricewrapper">
@@ -857,7 +857,7 @@
                                                          data-original="https://static.tildacdn.info/tild3363-3837-4130-b437-656264396531/pink_lacation.png"
                                                          imgfield="img2" style="width:100px;" alt="">
                         <div class="t567__title t-name t-name_xl" style="" field="title2">Address</div>
-                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Kellosilta 2<br>Helsinki
+                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Kellosilta 2B<br>Helsinki
                         </div>
                     </div>
                 </div>
@@ -947,7 +947,7 @@
                 <div class="t-col t-col_6 t-prefix_3">
                     <div class="t046__text t-text t-text_xs" style="color:#fbfbfb;" field="text">
                         <strong>Yhteystiedot</strong><br>"Levani.Studio"<br>Levani Group Oy<br>Y-tunnus:
-                        3259213-5<br><br>Kellosilta 2<br>00550 Helsinki <br><span
+                        3259213-5<br><br>Kellosilta 2B<br>00550 Helsinki <br><span
                             style="color: rgb(123, 123, 123);"> </span></div>
                 </div>
             </div>
