--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <meta property="og:url" content="http://massage.epil.fi/index.html">
     <meta property="og:title" content="Lasten hieronta Helsingissä">
-    <meta property="og:description" content="Anika työskentelee pääkaupunkiseudulla Suomessa tarjoten kotikäyntejä tai ottaen teidät mielellään vastaan viihtyisässä studiollaan osoitteessa Kellosilta 2 (Helsinki).">
+    <meta property="og:description" content="Anika työskentelee pääkaupunkiseudulla Suomessa tarjoten kotikäyntejä tai ottaen teidät mielellään vastaan viihtyisässä studiollaan osoitteessa Kellosilta 2B (Helsinki).">
 
     <meta property="og:type" content="website">
     <meta property="og:image"
@@ -625,7 +625,7 @@
                                 <p style="text-align: right;">Lasten HIERONTA HELSINKI</p></h1>
                             <div class="t102__descr t-descr t-descr_md t-animate t-animate_started"
                                  data-animate-style="fadeinup" data-animate-group="yes" style="transition-delay: 0.3s;"
-                                 field="descr">Kellosilta 2, Helsinki
+                                 field="descr">Kellosilta 2B, Helsinki
                             </div>
                             <span class="space"></span></div>
                     </div>
@@ -779,7 +779,7 @@
                         <div class="t681__tablewrapper">
                             <div class="t681__textwrapper">
                                 <div class="t681__price t-descr t-descr_sm" style="" field="li_descr__1493289538895">-
-                                    Hieronta studiolla Kellosilta 2
+                                    Hieronta studiolla Kellosilta 2B
                                 </div>
                             </div>
                             <div class="t681__pricewrapper">
@@ -858,7 +858,7 @@
                                                          data-original="https://static.tildacdn.info/tild3363-3837-4130-b437-656264396531/pink_lacation.png"
                                                          imgfield="img2" style="width:100px;" alt="">
                         <div class="t567__title t-name t-name_xl" style="" field="title2">Osoite</div>
-                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Kellosilta 2<br>Helsinki
+                        <div class="t567__descr t-text t-text_sm" style="" field="descr2">Kellosilta 2B<br>Helsinki
                         </div>
                     </div>
                 </div>
@@ -948,7 +948,7 @@
                 <div class="t-col t-col_6 t-prefix_3">
                     <div class="t046__text t-text t-text_xs" style="color:#fbfbfb;" field="text">
                         <strong>Yhteystiedot</strong><br>"Levani.Studio"<br>Levani Group Oy<br>Y-tunnus:
-                        3259213-5<br><br>Kellosilta 2<br>00550 Helsinki <br><span
+                        3259213-5<br><br>Kellosilta 2B<br>00550 Helsinki <br><span
                             style="color: rgb(123, 123, 123);"> </span></div>
                 </div>
             </div>
